Subiendo cambions en archivos .htm v2l

--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -30,22 +30,6 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Bienvenidos</a></li>
-						<li>
-							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li>
-									<a href="#">Phasellus consequat</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Phasellus consequat</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
-							</ul>
-						</li>
 						<li class="current"><a href="left-sidebar.html">Proyectos</a></li>
 						<li><a href="no-sidebar.html">Biografía</a></li>
 					</ul>
@@ -69,13 +53,14 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/pag-web-lab-1" class="image featured"><img src="images/BlogPersonal.png" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/pag-web-lab-1" class="image featured"><img
+									src="images/BlogPersonal.png" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Creación de una página web</h2>
 									<p>HTML, CSS</p>
 								</header>
-								<p>Creación de una página web personal contado nuestra biografía, 
+								<p>Creación de una página web personal contado nuestra biografía,
 									hobbies y una propuesta de la página de kinal.</p>
 							</div>
 						</section>
@@ -85,7 +70,8 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/CRUD-Categorias" class="image featured"><img src="images/CrudC.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/CRUD-Categorias" class="image featured"><img
+									src="images/CrudC.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Creación de CRUD de categoria</h2>
@@ -102,7 +88,8 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/Segundo-Avance-Proyecto-Final" class="image featured"><img src="images/AvanceF.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/Segundo-Avance-Proyecto-Final"
+								class="image featured"><img src="images/AvanceF.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Revisión del avance del proyecto final</h2>
@@ -118,13 +105,14 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/Proyecto-Final-Venta-Online" class="image featured"><img src="images/proyectoF.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/Proyecto-Final-Venta-Online"
+								class="image featured"><img src="images/proyectoF.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Proyecto final - Venta Online</h2>
 									<p>NodeJS, Express, MongoDB y JWT</p>
 								</header>
-								<p>El proyecto consiste en una API web creada con NodeJs que se encarga de 
+								<p>El proyecto consiste en una API web creada con NodeJs que se encarga de
 									llevar el registro de las ventas, productos en línea, etc.</p>
 							</div>
 						</section>
@@ -134,13 +122,14 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/gif-app-react-vite" class="image featured"><img src="images/Giff-app.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/gif-app-react-vite"
+								class="image featured"><img src="images/Giff-app.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Giff App React</h2>
-									<p>JavaScript  HTML CSS React</p>
+									<p>JavaScript HTML CSS React</p>
 								</header>
-								<p>Página con un buscador de Giff, primera implementación utilizando React 
+								<p>Página con un buscador de Giff, primera implementación utilizando React
 									y JavaScript para consumir una Api</p>
 							</div>
 						</section>
@@ -150,14 +139,15 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/Agenda-Web" class="image featured"><img src="images/agenda.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/Agenda-Web" class="image featured"><img
+									src="images/agenda.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Agenda web</h2>
-									<p>JavaScript  HTML CSS</p>
+									<p>JavaScript HTML CSS</p>
 								</header>
 								<p>Crear una agenda web con favoritos, contactos, nuevo contacto entre otras cosas,
-									 principal crear un toDo list funcional.
+									principal crear un toDo list funcional.
 								</p>
 							</div>
 						</section>
@@ -167,7 +157,8 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/HTML--CSS-pagina-Google" class="image featured"><img src="images/google.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/HTML--CSS-pagina-Google"
+								class="image featured"><img src="images/google.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Google</h2>
@@ -183,7 +174,8 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/Laboratorio-3-Gestor-Opiniones" class="image featured"><img src="images/opinion.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/Laboratorio-3-Gestor-Opiniones"
+								class="image featured"><img src="images/opinion.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Gestor de Opiniones</h2>
@@ -199,7 +191,8 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/jalvarez-2021317/Almacenadora-" class="image featured"><img src="images/almacenadora.jpg" alt="" /></a>
+							<a href="https://github.com/jalvarez-2021317/Almacenadora-" class="image featured"><img
+									src="images/almacenadora.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Almacenadora</h2>
@@ -228,7 +221,8 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/Calculadora-HTML" class="image featured"><img src="images/calculadora.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/Calculadora-HTML" class="image featured"><img
+									src="images/calculadora.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Calculadora</h2>
@@ -244,7 +238,8 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/Sitio-Web-Personal" class="image featured"><img src="images/webp.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/Sitio-Web-Personal"
+								class="image featured"><img src="images/webp.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Pagina Web Personal</h2>
@@ -260,7 +255,8 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/HTML-CSS-y-JS-Prueba" class="image featured"><img src="images/git.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/HTML-CSS-y-JS-Prueba"
+								class="image featured"><img src="images/git.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Primer proyecto Git</h2>
@@ -275,14 +271,16 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/javafx-control-academico-in5bv-2022" class="image featured"><img src="images/mysql.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/javafx-control-academico-in5bv-2022"
+								class="image featured"><img src="images/mysql.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Control Academico</h2>
 									<p>Java MySQL</p>
 								</header>
-								<p>Proyecto Control Académico, gestionar, ingresar, modificar a los alumnos e instructores 
-									, este se realizo utilizando la tecnología de JavaFx con conexión a base de datos 
+								<p>Proyecto Control Académico, gestionar, ingresar, modificar a los alumnos e
+									instructores
+									, este se realizo utilizando la tecnología de JavaFx con conexión a base de datos
 									en MySQL</p>
 							</div>
 						</section>
@@ -292,7 +290,8 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/Area-Perimetro" class="image featured"><img src="images/geometria.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/Area-Perimetro" class="image featured"><img
+									src="images/geometria.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Área y Perímetro</h2>
@@ -320,13 +319,15 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/Shop-Java" class="image featured"><img src="images/java.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/Shop-Java" class="image featured"><img
+									src="images/java.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Java Shop</h2>
 									<p>Java</p>
 								</header>
-								<p>Tienda en java puro con un menú de selecciones para que el usuario se pueda desplazarse cómodamente
+								<p>Tienda en java puro con un menú de selecciones para que el usuario se pueda
+									desplazarse cómodamente
 								</p>
 							</div>
 						</section>
@@ -336,7 +337,8 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/Practicas-Cisco" class="image featured"><img src="images/packet.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/Practicas-Cisco" class="image featured"><img
+									src="images/packet.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Packet Tracer 11.5.5</h2>
@@ -352,7 +354,8 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/Binario-java" class="image featured"><img src="images/binario.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/Binario-java" class="image featured"><img
+									src="images/binario.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Java Binario</h2>
@@ -367,14 +370,15 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/Pitagoras" class="image featured"><img src="images/pitagoras.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/Pitagoras" class="image featured"><img
+									src="images/pitagoras.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Pitágoras</h2>
 									<p>Java</p>
 								</header>
 								<p>Algoritmo en java que utilizando el teorema de Pitágoras nos permite calcular el
-									 lado faltante de cualquier triángulo rectángulo.</p>
+									lado faltante de cualquier triángulo rectángulo.</p>
 							</div>
 						</section>
 
@@ -383,13 +387,15 @@
 
 						<!-- Box -->
 						<section class="box feature">
-							<a href="https://github.com/malcantara-2021332/Numero-Menor" class="image featured"><img src="images/numero.jpg" alt="" /></a>
+							<a href="https://github.com/malcantara-2021332/Numero-Menor" class="image featured"><img
+									src="images/numero.jpg" alt="" /></a>
 							<div class="inner">
 								<header>
 									<h2>Número menor</h2>
 									<p>Java</p>
 								</header>
-								<p>Algoritmo en java que utilizando menor que y mayor que determina el número menor de una serie de 3 números.</p>
+								<p>Algoritmo en java que utilizando menor que y mayor que determina el número menor de
+									una serie de 3 números.</p>
 							</div>
 						</section>
 
